manifests/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      imagePullSecrets:
        - name: ghcr-credentials      
      containers:
        - name: app2-container
          image: ghcr.io/mikechatzis/app2-image:latest
          ports:
            - containerPort: 3000
