manifests/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      imagePullSecrets:
        - name: ghcr-credentials      
      containers:
        - name: app3-container
          image: ghcr.io/mikechatzis/app3-image:latest
          ports:
            - containerPort: 3000
