manifests/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
