manifests/app1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app1-service
                port:
                  number: 80
