manifests/app2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
spec:      
  rules:
    - host: app2.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app2-service
                port:
                  number: 80
