manifests/app3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
spec:     
  rules:
    - host: app3.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app3-service
                port:
                  number: 80
